[package]
name = "dataplane-concurrency"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
default = ["parking_lot"]
loom = ["dep:loom", "concurrency-macros/loom"]
parking_lot = ["dep:parking_lot"]
# `shuttle*` are three views of one backend, not three backends:
#
#   * `shuttle`     -- shuttle with the random scheduler (the default
#                      for first-time users -- you almost always want
#                      this one).
#   * `shuttle_pct` -- shuttle with the PCT scheduler.  Use when you
#                      want to bias toward rare interleavings.
#   * `shuttle_dfs` -- shuttle with the DFS scheduler.  Use for
#                      exhaustive small-state exploration.
#
# All three share the same `dep:shuttle` machinery; only the scheduler
# selected at runtime differs.  See `concurrency::stress` for the
# dispatch and the `#[concurrency::test]` attribute macro for the
# write-once-run-everywhere wrapper.
#
# The features form a chain (`shuttle_dfs` -> `shuttle_pct` -> `shuttle`)
# so that any `feature = "shuttle"` cfg check is true under all three
# variants.  cfg_select-style precedence (most-specific first) still
# picks the right scheduler.  See `concurrency::stress`.
shuttle = ["dep:shuttle", "concurrency-macros/shuttle"]
shuttle_pct = ["shuttle"]
shuttle_dfs = ["shuttle_pct"]
silence_clippy = ["concurrency-macros/silence_clippy"] # Do not manually enable this feature, let --all-features do it for you
# Force the Mutex-based slot fallback even without a model checker.
# Intended for the CI miri job that exercises the fallback slot under
# strict-provenance; arc_swap uses hazard pointers that strict-provenance
# rejects, so the production slot can't be miri-checked under strict
# provenance.
_strict_provenance = []

[dependencies]
arc-swap = { workspace = true }
concurrency-macros = { workspace = true, features = [] }
loom = { workspace = true, optional = true, features = [] }
parking_lot = { workspace = true, optional = true, features = [] }
shuttle = { workspace = true, optional = true, features = [] }
static_assertions = { workspace = true }

[dev-dependencies]
bolero = { workspace = true, features = ["std"] }
