[package]
name = "dataplane-concurrency"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
default = ["parking_lot"]
loom = ["dep:loom", "concurrency-macros/loom"]
parking_lot = ["dep:parking_lot"]
# `shuttle` enables shuttle's model-checker behind the
# `concurrency::stress` dispatcher.  The dispatcher builds a
# `shuttle::PortfolioRunner` that runs the `RandomScheduler` and the
# `PctScheduler` in parallel: random for broad coverage, PCT to bias
# toward rare interleavings.  Either scheduler finding a
# counterexample fails the whole test.
#
# `shuttle_dfs` is an additive opt-in on top of `shuttle`: it also
# adds the `DfsScheduler` (depth-first exhaustive search up to
# `ITERATIONS`) to the same portfolio.  Off by default because DFS is
# only useful for tests with small state spaces; turn it on locally
# (or in a dedicated CI step) when you want exhaustive exploration on
# top of the default portfolio.  Future extra schedulers should
# follow the same pattern -- one additive feature per scheduler,
# composed into the portfolio in `concurrency::stress`.
shuttle = ["dep:shuttle", "concurrency-macros/shuttle"]
shuttle_dfs = ["shuttle"]
silence_clippy = ["concurrency-macros/silence_clippy"] # Do not manually enable this feature, let --all-features do it for you
# Force the Mutex-based slot fallback even without a model checker.
# Intended for the CI miri job that exercises the fallback slot under
# strict-provenance; arc_swap uses hazard pointers that strict-provenance
# rejects, so the production slot can't be miri-checked under strict
# provenance.
_strict_provenance = []

[dependencies]
arc-swap = { workspace = true }
concurrency-macros = { workspace = true, features = [] }
loom = { workspace = true, optional = true, features = [] }
parking_lot = { workspace = true, optional = true, features = [] }
shuttle = { workspace = true, optional = true, features = [] }
static_assertions = { workspace = true }

[dev-dependencies]
bolero = { workspace = true, features = ["std"] }
