[package]
name = "dataplane-config"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
# internal
hardware = { workspace = true }
net = { workspace = true }
lpm = { workspace = true }
tracectl = { workspace = true }
k8s-types = { workspace = true }

# external
chrono = { workspace = true, features = ["alloc"] }
derive_builder = { workspace = true, default-features = false, features = ["default"] }
ipnet = { workspace = true }
linkme = { workspace = true }
multi_index_map = { workspace = true, features = ["serde"] }
ordermap = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

[dev-dependencies]
# internal
pipeline = { workspace = true } # should be removed w/ NAT
lpm = { workspace = true, features = ["testing"] }
hardware = { workspace = true, features = ["bolero"] }
k8s-intf = { workspace = true, features = ["bolero"] }

# external
bolero = { workspace = true, default-features = false, features = ["alloc"] }
caps = { workspace = true }
ipnet = { workspace = true }
pretty_assertions = { workspace = true, features = ["std"] }
