[package]
name = "dataplane-config"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
# Expose the unsafe `fake_*_for_tests` constructors that mint validated wrappers without running
# real validation. Intended for use from other crates' test code only.
testing = []

[dependencies]
# internal
common = { workspace = true }
k8s-intf = { workspace = true }
net = { workspace = true }
lpm = { workspace = true }

# external
arc-swap = { workspace = true }
chrono = { workspace = true, features = ["alloc", "std"] }
derive_builder = { workspace = true, features = [] }
ipnet = { workspace = true }
multi_index_map = { workspace = true, features = ["serde"] }
ordermap = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

[target.'cfg(unix)'.dependencies]
linkme = { workspace = true }
tracectl = { workspace = true }

[dev-dependencies]
# internal
pipeline = { workspace = true } # should be removed w/ NAT
lpm = { workspace = true, features = ["bolero", "testing"] }
k8s-intf = { workspace = true, features = ["bolero"] }

# external
bolero = { workspace = true, features = ["alloc"] }
caps = { workspace = true }
ipnet = { workspace = true }
pretty_assertions = { workspace = true, features = ["std"] }
