[package]
name = "dataplane"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[dependencies]
afpacket = { workspace = true }
arrayvec = { workspace = true }
clap = { workspace = true, features = ["std", "derive", "usage"] }
ctrlc = { workspace = true, features = ["termination"] }
dpdk = { workspace = true }
mgmt = { workspace = true }
mio = { workspace = true, features = ["os-ext", "net"] }
net = { workspace = true, features = ["test_buffer"] }
netdev = { workspace = true }
pipeline = { workspace = true }
routing = { workspace = true, features = ["auto-learn"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["default"] }

[dev-dependencies]
net = { workspace = true, features = ["test_buffer"] }
routing = { workspace = true, features = ["testing"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(none)'] }
