[package]
name = "dataplane"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[dependencies]
afpacket = { workspace = true }
args = { workspace = true }
arrayvec = { workspace = true }
axum = { workspace = true, features = ["http1", "tokio"] }
axum-server = { workspace = true }
concurrency = { workspace = true }
ctrlc = { workspace = true, features = ["termination"] }
derive_builder = { workspace = true, features = [] }
dpdk = { workspace = true }
dpdk-sys = { workspace = true } # TODO: Banish this back to dpdk world
driver = { workspace = true }
dyn-iter = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
id = { workspace = true }
interface-manager = { workspace = true }
linkme = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
mgmt = { workspace = true }
miette = { workspace = true, features = ["derive", "fancy"] }
mio = { workspace = true, features = ["os-ext", "net"] }
nat = { workspace = true }
net = { workspace = true, features = ["test_buffer"] }
netdev = { workspace = true }
nix = { workspace = true, default-features = false, features = ["ioctl", "net"] }
once_cell = { workspace = true }
ordermap = { workspace = true, features = ["std"] }
parking_lot = { workspace = true }
pipeline = { workspace = true }
pkt-io = { workspace = true }
pkt-meta = { workspace = true }
pyroscope = { workspace = true }
pyroscope_pprofrs = { workspace = true }
rkyv = { workspace = true, features = [] }
routing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
small-map = { workspace = true, features = [] }
stats = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = [] }
tracectl = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = true }
vector-map = { version = "1.0.2", default-features = false, features = [] }
vpcmap = { workspace = true }

[dev-dependencies]
# internal
net = { workspace = true, features = ["test_buffer"] }
routing = { workspace = true, features = ["testing"] }

# external
n-vm = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(none)'] }
