[package]
name = "dataplane"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
default = []
# Bin is gated out under loom (see `src/main.rs`); the feature exists so
# `--features loom` resolves at workspace level and propagates to libs.
loom = ["concurrency/loom"]

[dependencies]
acl-filter = { workspace = true }
afpacket = { workspace = true, features = ["async-tokio"] }
args = { workspace = true }
arrayvec = { workspace = true }
axum = { workspace = true, features = ["http1", "tokio"] }
axum-server = { workspace = true }
concurrency = { workspace = true }
config = { workspace = true }
dpdk = { workspace = true }
dyn-iter = { workspace = true }
flow-entry = { workspace = true }
flow-filter-legacy = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
id = { workspace = true }
lifecycle = { workspace = true }
linkme = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
mgmt = { workspace = true }
nat = { workspace = true }
net = { workspace = true, features = ["test_buffer"] }
nix = { workspace = true, features = ["socket", "hostname"] }
netdev = { workspace = true }
once_cell = { workspace = true }
ordermap = { workspace = true, features = ["std"] }
parking_lot = { workspace = true }
pipeline = { workspace = true }
pyroscope = { workspace = true, features = ["backend-pprof-rs"] }
routing = { workspace = true }
rtnetlink = { workspace = true, features = ["default", "tokio"] }
serde = { workspace = true, features = ["derive"] }
stats = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tracectl = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = true }
vpcmap = { workspace = true }

[dev-dependencies]
# internal
net = { workspace = true, features = ["test_buffer"] }
routing = { workspace = true, features = ["testing"] }

# external
n-vm = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
