[package]
name = "dpdk-sys"
version = "0.0.1"
edition = "2021"
description = "Low-level bindings to the Data Plane Development Kit (DPDK)"
publish = false
resolver = "2"

[lib]
crate-type = ["rlib"]

[build-dependencies]
bindgen = { workspace = true, features = ["runtime"] }
doxygen-rs = { workspace = true }
dpdk-sysroot-helper = { path = "../dpdk-sysroot-helper", version = "0.0.1" }
