[package]
name = "dpdk-sys"
version = "0.0.1"
edition = "2021"
description = "Low-level bindings to the Data Plane Development Kit (DPDK)"
publish = false

[build-dependencies]
bindgen = { workspace = true, default-features = false, features = ["experimental", "runtime"] }
doxygen-rs = { workspace = true }
dpdk-sysroot-helper = { workspace = true }
