[package]
name = "dataplane-dpdk-sys"
description = "Low-level bindings to the Data Plane Development Kit (DPDK)"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lib]
doc = false

[build-dependencies]
bindgen = { workspace = true, features = ["runtime", "experimental"]}
doxygen-bindgen = { workspace = true }
dpdk-sysroot-helper = { workspace = true }
