[package]
name = "dataplane-dpdk-test-macros"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = { workspace = true, default-features = true }
proc-macro2 = { workspace = true, default-features = true }
quote = { workspace = true, default-features = true }
syn = { workspace = true, default-features = true, features = ["full"] }
