[package]
name = "dpdk-thin"
version = "0.0.1"
edition = "2021"

[features]
default = ["serde", "tracing_max_level_trace", "tracing_release_max_level_debug"]
serde = ["dep:serde"]
_dev = ["_fake_kani"]
_fake_kani = [] # for internal use only

tracing_max_level_debug = ["tracing/max_level_debug"]
tracing_max_level_error = ["tracing/max_level_error"]
tracing_max_level_info = ["tracing/max_level_info"]
tracing_max_level_off = ["tracing/max_level_off"]
tracing_max_level_trace = ["tracing/max_level_trace"]
tracing_max_level_warn = ["tracing/max_level_warn"]

tracing_release_max_level_debug = ["tracing/release_max_level_debug"]
tracing_release_max_level_error = ["tracing/release_max_level_error"]
tracing_release_max_level_info = ["tracing/release_max_level_info"]
tracing_release_max_level_off = ["tracing/release_max_level_off"]
tracing_release_max_level_trace = ["tracing/release_max_level_trace"]
tracing_release_max_level_warn = ["tracing/release_max_level_warn"]


[dependencies]
dpdk-sys = { path = "../dpdk-sys" }

thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }
tracing-test = { workspace = true }
