[package]
name = "dataplane-dpdk"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]

dpdk-sys = { workspace = true }
errno = { workspace = true }
net = { workspace = true }
strum = { workspace = true, features = ["derive"] }

thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

[build-dependencies]
dpdk-sysroot-helper = { workspace = true }
