[package]
name = "dataplane-dpdk"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]

concurrency = { workspace = true }
dpdk-sys = { workspace = true }
errno = { workspace = true }
net = { workspace = true }

serde = { workspace = true, optional = true, features = ["std"] }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

[build-dependencies]
dpdk-sysroot-helper = { workspace = true }

[dev-dependencies]
id = { workspace = true }

bolero = { workspace = true, default-features = false, features = ["std"] }
nix = { workspace = true, features = ["sched"] }
