[package]
name = "dataplane-dpdk"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde"]
test = ["dep:id", "dep:nix", "dep:dpdk-test-macros"]

[dependencies]

concurrency = { workspace = true }
dpdk-sys = { workspace = true }
dpdk-test-macros = { workspace = true, optional = true }
errno = { workspace = true }
id = { workspace = true, optional = true }
net = { workspace = true }
nix = { workspace = true, optional = true, features = ["sched"] }

serde = { workspace = true, optional = true, features = ["std"] }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

[build-dependencies]
dpdk-sysroot-helper = { workspace = true }

[dev-dependencies]
bolero = { workspace = true, default-features = false, features = ["std"] }
dataplane-dpdk = { path = ".", features = ["test"] }
