[package]
name = "dataplane-errno"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[dependencies]

thiserror = { workspace = true }


[build-dependencies]
dpdk-sysroot-helper = { workspace = true }

[dev-dependencies]
n-vm = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["rt", "process", "macros", "fs", "net", "time", "io-util", "net", "io-std"] }
tracing-subscriber = { workspace = true, default-features = false, features = ["fmt"] }
tracing = { workspace = true, default-features = false, features = [] }
