[package]
name = "fixin"
version = "0.0.1"
authors = ["Daniel Noland <daniel@githedgehog.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2024"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-error2 = { workspace = true }
quote = { workspace = true }
syn =  { workspace = true }

