[package]
name = "dataplane-flow-entry"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
shuttle = ["concurrency/shuttle"]
std = []
testing = []
bolero = ["dep:bolero", "net/bolero"]

[dependencies]
ahash = { workspace = true, features = ["no-rng"] }
bolero = { workspace = true, optional = true }
concurrency = { workspace = true }
dashmap = { workspace = true, features = ["raw-api"] }
etherparse = { workspace = true }
flow-info = { workspace = true }
linkme = { workspace = true }
net = { workspace = true }
pipeline = { workspace = true }
priority-queue = { workspace = true }
thiserror = { workspace = true }
thread_local = { workspace = true }
tracectl = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
bolero = { workspace = true, default-features = false }
net = { workspace = true, features = ["bolero"] }
tracing-test = { workspace = true, features = [] }
shuttle = { workspace = true }
