[package]
name = "dataplane-flow-entry"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
shuttle = ["concurrency/shuttle"]
std = []
testing = []
bolero = ["dep:bolero", "net/bolero"]

[dependencies]
ahash = { workspace = true, features = ["no-rng"] }
bolero = { workspace = true, optional = true }
common = { workspace = true }
concurrency = { workspace = true }
dashmap = { workspace = true, features = ["raw-api"] }
etherparse = { workspace = true }
linkme = { workspace = true }
net = { workspace = true }
pipeline = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "time"] }
tracectl = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
bolero = { workspace = true, default-features = false }
net = { workspace = true, features = ["bolero"] }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tracing-test = { workspace = true, features = [] }
shuttle = { workspace = true }
