[package]
name = "dataplane-flow-filter"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
common = { workspace = true }
concurrency = { workspace = true }
config = { workspace = true }
indenter = { workspace = true }
left-right = { workspace = true }
linkme = { workspace = true }
lpm = { workspace = true }
net = { workspace = true }
pipeline = { workspace = true }
tracectl = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
config = { workspace = true, features = ["testing"] }
lpm = { workspace = true, features = ["testing"] }
tracing-test = { workspace = true, features = [] }
