[package]
name = "dataplane-flow-filter"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
# internal
acl = { workspace = true }
common = { workspace = true }
concurrency = { workspace = true }
config = { workspace = true }
dpdk = { workspace = true }
lookup = { workspace = true }
lpm = { workspace = true }
match-action = { workspace = true, features = ["derive"] }
net = { workspace = true }
pipeline = { workspace = true }

# external
tracing = { workspace = true }

[dev-dependencies]
# The reference (linear-scan) ACL backend is the differential-test oracle and drives the fast,
# EAL-free semantic suite. It is `cfg(test)`-gated in the source, so it is never part of a
# production build; this dev-dep just makes `acl::reference` available to test builds.
acl = { workspace = true, features = ["reference"] }
dpdk = { workspace = true, features = ["test"] }
lpm = { workspace = true, features = ["testing"] }
net = { workspace = true, features = ["builder"] }
