[package]
name = "dataplane-flow-info"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
std = []
testing = []

[dependencies]
atomic-instant-full = { workspace = true }
concurrency = { workspace = true }
downcast-rs = { workspace = true, features = ["sync"] }
thiserror = { workspace = true }
