[package]
name = "dataplane-flow-test"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
# Internal
net = { workspace = true, features = ["test_buffer"] }

# External
smoltcp = { workspace = true, features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
    "socket-udp",
    "socket-icmp",
    "alloc",
] }
tracing = { workspace = true }

[dev-dependencies]
tracing-test = { workspace = true, features = [] }