[package]
name = "dataplane-id"
version = "0.1.0"
edition = "2024"

[features]
default = ["serde"]
bolero = ["dep:bolero"]
serde = ["dep:serde", "uuid/serde"]

[dependencies]
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true, optional = true, features = ["derive"] }
bolero = { workspace = true, optional = true }

[dev-dependencies]
bolero = { workspace = true, features = ["std"] }
