[package]
name = "dataplane-id"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
default = []
bolero = ["dep:bolero"]
serde = ["dep:serde", "uuid/serde"]
rkyv = ["dep:rkyv"]

[dependencies]
bolero = { workspace = true, optional = true }
rkyv = { workspace = true, optional = true, features = ["uuid-1"] }
serde = { workspace = true, optional = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "v5"] }

[dev-dependencies]
bolero = { workspace = true, features = ["std"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
