[package]
name = "dataplane-init"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]

# internal
args = { workspace = true, features = [] }
hardware = { workspace = true, features = ["scan", "serde"] }
id = { workspace = true, features = [] }

# external
color-eyre = { workspace = true, features = ["capture-spantrace"] }
command-fds = { workspace = true, features = [] }
miette = { workspace = true, features = ["derive", "fancy"] }
nix = { workspace = true, features = ["fs", "mount"] }
procfs = { workspace = true, features = [] }
rkyv = { workspace = true, features = ["alloc", "bytecheck", "std"] }
serde = { workspace = true, features = ["derive", "std"] }
serde_yaml_ng = { workspace = true, default-features = false, features = [] }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true, features = [] }
sysfs = { workspace = true, features = [] }
thiserror = { workspace = true, features = ["std"] }
tracing = { workspace = true, features = ["attributes"] }
tracing-error = { workspace = true, features = ["traced-error"]}
tracing-subscriber = { workspace = true, features = ["ansi", "fmt"] }

[dev-dependencies]
# internal

# external

[build-dependencies]
# internal
dpdk-sysroot-helper = { workspace = true }

# external
