[package]
name = "dataplane-interface-manager"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
publish = false

[features]
default = []
netdevsim = []
bolero = ["dep:bolero", "net/bolero"]

[dependencies]
# internal
id = { workspace = true, features = ["rkyv"] }
net = { workspace = true }
rekon = { workspace = true }
tracectl = { workspace = true }

# external
bolero = { workspace = true, optional = true, default-features = false, features = ["alloc"] }
caps = { workspace = true, features = [] }
derive_builder = { workspace = true, default-features = false, features = ["default"] }
futures = { workspace = true, features = ["default"] }
hwlocality = { workspace = true, features = ["hwloc-latest"] }
libc = { workspace = true, features = [] }
multi_index_map = { workspace = true, features = ["serde"] }
nix = { workspace = true, default-features = false, features = ["ioctl"] }
num-derive = { workspace = true, features = [] }
num-traits = { workspace = true, features = [] }
pci-ids = { workspace = true, features = [] }
pci-info = { workspace = true, default-features = false, features = ["pci_subclass_debug_strings", "pci_interface_func_debug_strings", "pci_class_debug_strings"] }
rkyv = { workspace = true, features = ["std", "default"] }
rtnetlink = { workspace = true, features = ["default", "tokio"] }
serde = { workspace = true, features = ["std"] }
serde_yaml_ng = { workspace = true, features = [] }
static_assertions = { workspace = true, features = [] }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true, features = ["std"] }
tokio = { workspace = true, default-features = false, features = ["fs", "io-util"] }
tracing = { workspace = true, features = ["attributes"] }

[dev-dependencies]
# internal
fixin = { workspace = true, features = [] }
net = { workspace = true, features = ["bolero"] }
test-utils = { workspace = true, features = [] }

# external
bolero = { workspace = true, default-features = false, features = ["alloc"] }

[build-dependencies]
dpdk-sysroot-helper = { workspace = true }
