[package]
name = "dataplane-interface-manager"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
default = []
netdevsim = ["net/netdevsim"]
bolero = ["dep:bolero", "netdevsim", "net/test_buffer", "net/serde", "net/bolero"]

[dependencies]
# internal
concurrency = { workspace = true }
net = { workspace = true, features = [] }
rekon = { workspace = true }

# external
bolero = { workspace = true, optional = true, default-features = false, features = ["alloc"] }
derive_builder = { workspace = true, default-features = false, features = ["default"] }
futures = { workspace = true, features = ["default"] }
libc = { workspace = true, features = [] }
multi_index_map = { workspace = true, features = ["serde"] }
nix = { workspace = true, default-features = false, features = ["ioctl"] }
rtnetlink = { workspace = true, features = ["default", "tokio"] }
serde = { workspace = true, features = ["std"] }
static_assertions = { workspace = true, features = [] }
thiserror = { workspace = true, features = ["std"] }
tokio = { workspace = true, default-features = false, features = ["fs", "io-util"] }
tokio-util = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

[dev-dependencies]
# internal
fixin = { workspace = true }
net = { workspace = true, features = ["bolero", "test_buffer", "serde", "netdevsim"] }
n-vm = { workspace = true }
test-utils = { workspace = true }

# external
caps = { workspace = true, default-features = false, features = [] }
bolero = { workspace = true, default-features = false, features = ["alloc"] }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }
