[package]
name = "dataplane-k8s-intf"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
bolero = ["dep:bolero", "dep:hardware", "dep:net", "dep:lpm", "net/test_buffer"]

[dependencies]
# internal

# external
bolero = { workspace = true, optional = true }
hardware = { workspace = true, optional = true, features = ["bolero"] }
kube = { workspace = true, features = ["derive"] }
k8s-openapi = { workspace = true, features = ["latest", "schemars", "std"] }
lpm = { workspace = true, optional = true }
net = { workspace = true, optional = true, features = ["bolero"] }
schemars = { workspace = true, features = ["derive", "std"] }
serde = { workspace = true }
serde-duration-ext = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
bolero = { workspace = true }
hardware = { workspace = true, features = ["bolero"] }
lpm = { workspace = true, features = [] }
net = { workspace = true, features = ["bolero", "test_buffer"] }

[build-dependencies]
dotenvy = { workspace = true, features = [] }
ureq = { workspace = true, features = ["rustls", "gzip"] }
